--- a/.github/workflows/18.yml
+++ b/.github/workflows/18.yml
@@ -6,7 +6,11 @@ on:
     - cron: '0 2 * * 0'
   workflow_dispatch:
     # 允许手动触发
-
+    
+# 赋予 workflow 写入权限
+permissions:
+  contents: write
+  
 jobs:
   check_links:
     runs-on: ubuntu-latest
